k8s-manifests/app-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-service
  namespace: openshift-infra-automation
spec:
  selector:
    app: guestbook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guestbook-route
  namespace: openshift-infra-automation
spec:
  to:
    kind: Service
    name: guestbook-service
  port:
    targetPort: 80
